[tool.poetry]
name = "echo-board"
version = "0.1.0"
description = "REST API server built with FastAPI"
authors = ["junhopark97 <jh97.dev@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.2"
httpx = "^0.28.1"

[tool.poetry.scripts]
dev = "src.server:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [  # https://docs.astral.sh/ruff/rules/
    "E",  # pycodestyle error
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
]
